[gd_scene load_steps=16 format=3 uid="uid://dl24fje6uuif8"]

[ext_resource type="Script" path="res://Scenes/Misc/menus/main_menu.gd" id="1_dpnep"]
[ext_resource type="Texture2D" uid="uid://c0i0uu05gyy6f" path="res://Art/MiscUI/TitleGraphics.png" id="2_3n42y"]
[ext_resource type="Texture2D" uid="uid://e5ndj133b74x" path="res://Art/MiscUI/Start_Text_Dark.png" id="3_3sq7u"]
[ext_resource type="Texture2D" uid="uid://b0ytm3mar2osx" path="res://Art/MiscUI/Start_Text.png" id="4_6hkik"]
[ext_resource type="Texture2D" uid="uid://dxiov5xm7aoyy" path="res://Art/MiscUI/Options_Text_Dark.png" id="5_8w48e"]
[ext_resource type="Texture2D" uid="uid://uknyeeaimire" path="res://Art/MiscUI/Options_Text.png" id="6_kbc1g"]
[ext_resource type="Texture2D" uid="uid://llvk1trsb8jn" path="res://Art/MiscUI/Exit_Text_Dark.png" id="7_lq3cg"]
[ext_resource type="Texture2D" uid="uid://btm8drtdi2xux" path="res://Art/MiscUI/Exit_Text.png" id="8_ioa04"]
[ext_resource type="Texture2D" uid="uid://gmvkwwuh4a77" path="res://Art/Player/PlayerSprite.png" id="9_1ggfw"]
[ext_resource type="PackedScene" uid="uid://cqn4n44lubnpt" path="res://Scenes/Entities/effect_audio_player.tscn" id="10_wdok1"]
[ext_resource type="AudioStream" uid="uid://ygbh01damfuj" path="res://Sound/MMX1 - Cursor Move.wav" id="11_frkx1"]

[sub_resource type="Animation" id="Animation_gd4wt"]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeColor:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1.8025, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeColor:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_q3xcm"]
resource_name = "LilyShot"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [41, 42, 14]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"shot_finished"],
"method": &"emit_signal"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EffectAudioPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6t08i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeColor:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeColor:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EffectAudioPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1fb42"]
_data = {
"FadeIn": SubResource("Animation_gd4wt"),
"LilyShot": SubResource("Animation_q3xcm"),
"RESET": SubResource("Animation_6t08i")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dpnep")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0862745, 0.145098, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -165.5
offset_top = 5.695
offset_right = 165.5
offset_bottom = 129.695
grow_horizontal = 2
texture = ExtResource("2_3n42y")

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -104.0
offset_right = 68.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(50, 80)
theme_override_constants/separation = 10

[node name="Control2" type="Control" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Start" type="TextureButton" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.3
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Options")
texture_normal = ExtResource("3_3sq7u")
texture_focused = ExtResource("4_6hkik")
stretch_mode = 3

[node name="Options" type="TextureButton" parent="CenterContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.3
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Quit")
texture_normal = ExtResource("5_8w48e")
texture_focused = ExtResource("6_kbc1g")
stretch_mode = 3

[node name="Quit" type="TextureButton" parent="CenterContainer"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.3
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Start")
texture_normal = ExtResource("7_lq3cg")
texture_focused = ExtResource("8_ioa04")
stretch_mode = 3

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1fb42")
}
autoplay = "FadeIn"

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(139, 155)
texture = ExtResource("9_1ggfw")
hframes = 7
vframes = 11
frame = 14

[node name="BusterPosition" type="Marker2D" parent="PlayerSprite"]
position = Vector2(19, -2)

[node name="FadeColor" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EffectAudioPlayer" parent="." instance=ExtResource("10_wdok1")]
stream = ExtResource("11_frkx1")

[connection signal="focus_entered" from="CenterContainer/Start" to="." method="_on_start_focus_entered"]
[connection signal="pressed" from="CenterContainer/Start" to="." method="_on_start_pressed"]
[connection signal="focus_entered" from="CenterContainer/Options" to="." method="_on_options_focus_entered"]
[connection signal="pressed" from="CenterContainer/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="CenterContainer/Quit" to="." method="_on_quit_focus_entered"]
[connection signal="pressed" from="CenterContainer/Quit" to="." method="_on_quit_pressed"]
